--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!--    fontawesome-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
@@ -28,7 +27,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top ">
 
             <a href="#" class="navbar-brand"><i class="fas fa-laptop text-warning fa-2x"></i></a>
-            <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+            <button type="button" class="navbar-toggler bg-dark" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -40,13 +39,8 @@
                     <li class="nav-item">
                         <a href="#skills" class="nav-link  text-light text-uppercase font-weight-bold px-3">Skills <span class="sr-only">(Skills)</a>
                     </li>
-                    <li class="nav-item dropdown" data-toggle="dropdown">
-                        <a href="#" class="nav-link dropdown-toggle text-light text-uppercase font-weight-bold px-3" id="projectsDropdown"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects <span class="sr-only">(Projects)</a>
-                            <div class="dropdown-menu" aria-labelledby="projectsDropdown">
-                                <a class="dropdown-item" href="#">Project 1</a>
-                                <a class="dropdown-item" href="#">Project 2</a>
-                                <a class="dropdown-item" href="#">Project 3</a>
-                            </div>
+                    <li class="nav-item">
+                        <a href="#projects" class="nav-link text-light text-uppercase font-weight-bold px-3"  role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="sr-only">(Projects)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#">Contact</a>
@@ -62,13 +56,15 @@
             <div class="row bg-banner"></div>
             <div class="row" style="height: 50vh;">
                 <div class="col-md-4  text-center my-auto">
-                    <p class="regard" style="font-size:5vw;">Hello</p>
+                    <p class="regard">Hello</p>
                 </div>
                 <div class="col-md-4 order-3 order-md-12 text-center my-auto">
-                    <img src="icons/avatar.svg"  class="rounded-circle img-fluid" alt="Responsive Image" width="50%" height="50%">
+                    <img src="icons/avatar.svg"  class="rounded-circle img-fluid" alt="Responsive Image" 
+                    style="max-width: 15rem;">
+                    <p class="regard">Java Developer</p>
                 </div>
                 <div class="col-md-4 order-2 order-md-12 text-center my-auto">
-                    <p class="regard" style="font-size:5vw;">I'm Rodrigo Díaz</p>
+                    <p class="regard">I'm Rodrigo Díaz</p>
                 </div>
             </div>
         </div>
@@ -76,60 +72,90 @@
     <!-- end of Home -->
     
     <!-- skills -->
-    <section class="bg-light p-5" id="skills">
-        <div class="container-fluid">
+    <section class="bg-light p-5" id="skills" style=" height: 100vh; overflow: scroll;">
+        <div class="container-fluid  p-2">
             <!-- title -->
             <div class="row">
                 <div class="col text-center mb-3">
-                    <h1 class="text-warning display-2">Skills</h1>
+                    <h1 class="display-2 section-title">Skills</h1>
                     <p class="lead text-secondary">Set of technical tools I use commonly</p>
                 </div>
             </div>
             <!-- end of title -->
             <div class="row">
-                <div class="col-md-2 col-sm-4  col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                    <div class="circle"><span class=" font-weight-bold">Java</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4  col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">JavaScript</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">PHP</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">ANSI C</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 align-self-center mt-3">
+                <div class="col-md-2 col-sm-4 col-6 align-self-center mt-3">
                     <div class="circle "><span class=" font-weight-bold">HTML</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">CSS</span></div>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">MySql</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">GIT</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">SVN</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">Linux</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">Eclipse RCP</span></div>
                 </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mt-3">
+                <div class="col-md-2 col-sm-4 col-6 mt-3">
                     <div class="circle"><span class=" font-weight-bold">Windows</span></div>
                 </div>
             </div>
         </div>
     </section>
     <!-- end of skills -->
-  
+    <!-- Projects -->
+    <section class="p-5" id="projects" style="background-color: #c2e1c2; height: 100vh;">
+        <div class="container-fluid  p-2">
+            <!-- title -->
+            <div class="row">
+                <div class="col text-center mb-3">
+                    <h1 class="display-2 section-title">Projects</h1>
+                    <p class="lead text-secondary">Fancy stuffs coming soon!</p>
+                </div>
+            </div>
+            <!-- end of title -->
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img src="https://via.placeholder.com/250" class="img-thumbnail">
+                    <h2 class="my-3 projects-title">One</h2>
+                    <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, nemo!</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img src="https://via.placeholder.com/250" class="img-thumbnail">
+                    <h2 class="my-3 projects-title">Two</h2>
+                    <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, nemo!</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img src="https://via.placeholder.com/250" class="img-thumbnail">
+                    <h2 class="my-3 projects-title">Three</h2>
+                    <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, nemo!</p>
+                </div>
+            </div>
+        </div>
+     </section>
+     <!-- end of projects -->
     <footer></footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
