--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="#projects" class="nav-link text-light text-uppercase font-weight-bold px-3"  role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="sr-only">(Projects)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#">Contact</a>
+                        <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#contact">Contact</a>
                     </li>
                 </ul>     
             </div>
@@ -154,13 +154,78 @@
                 </div>
             </div>
         </div>
-     </section>
-     <!-- end of projects -->
+    </section>
+    <!-- end of projects -->
+    <!-- contact -->
+    <section class="p-5" id="contact" style="background-color: #A3BAC3;  height: 100vh;">
+        <div class="container-fluid">
+             <!-- title -->
+             <div class="row">
+                <div class="col text-center mb-3">
+                    <h1 class="display-2 section-title">Contact Me</h1>
+                    <p class="lead text-secondary"></p>
+                </div>
+            </div>
+            <!-- end of title -->
+            <div class="row justify-content-center">
+                <div class="col-lg-6 col-md-8 col-sm-10">
+                    <div  id="emptyFields" class="alert alert-warning" role="alert" style="display: none;">
+                        You need to fill all the fields
+                    </div>
+                    <div class="text-center text-secondary">
+                    </div>
+                    <form class="text-muted" id="contactForm">
+                        <div class="form-group">
+                            <label for="name">Your Name</label>
+                            <input type="text" class="form-control" id="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Your Email</label>
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Your Message</label>
+                            <textarea class="form-control" id="message" rows="3"></textarea>
+                        </div>
+                        <a id="mailto" href="" class="btn btn-dark btn-block" type="submit">Send message</a>
+                    </form>
+                </div>
+            </div>
+        </div> 
+    </section>
+    <!-- end of contact -->
     <footer></footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+    <script>
+        let warning= document.getElementById("emptyFields");
+        let form = document.getElementById("contactForm");
+        let name = document.getElementById("name");
+        let email = document.getElementById("email");
+        let message = document.getElementById("message");
+        let mailto = document.getElementById("mailto");
+            
+        mailto.addEventListener("click", function(e){
+            if(name.value && email.value && message.value){
+                let emailBody = "mailto:rodrigo.diaz@theksquaregroup.com?subject=I saw your portafolio and I would like to talk to you :)&body=";
+                emailBody += message.value; 
+                mailto.href= emailBody;
+                // form.submit(); 
+                resetForm();   
+            }else{
+                warning.style.display="block";
+                setTimeout(() => warning.style.display="none",5000);
+            } 
+        });
+
+        function resetForm(){
+            name.value="";
+            email.value="";
+            message.value="";
+        }
+    </script>
+</body>
 </html>
