--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                     <p class="regard">Hello</p>
                 </div>
                 <div class="col-md-4 order-3 order-md-12 text-center my-auto">
-                    <img src="icons/avatar.svg"  class="rounded-circle img-fluid" alt="Responsive Image" 
-                    style="max-width: 15rem;">
+                    <img src="icons/avatar.svg"  class="rounded-circle img-fluid avatar-img" alt="Responsive Image">
                     <p class="regard">Java Developer</p>
                 </div>
                 <div class="col-md-4 order-2 order-md-12 text-center my-auto">
@@ -81,11 +80,11 @@
     <section class="bg-about  fill-height-min space-title" id="about-me">
         <div class="container-fluid p-2">
             <div class="row justify-content-center">
-                <div class="col-md-12 text-center mb-3">
-                    <h1 class="display-2 section-title">About Me</h1>
-                    <p class="lead text-light">I'm a computer engineer who graduated form UADY university</p>
+                <div class="col-md-12 text-left mb-3">
+                    <h1 class="display-2 text-center section-title">About Me</h1>
+                    <p class="lead text-light">I'm a computer engineer who graduated from UADY university.</p>
                     <p class="lead text-light">I have 3+ years of experience in the field of software development. I have played roles like Tester and Developer</p>
-                    <p class="lead text-light">I like listen to music and podcast but, also I love to cook :)</p>
+                    <p class="lead text-light">I like to listen to music and podcast but, also I love to cook :)</p>
                 </div>
                 <div class="col-md-12 text-center">
                     <p class="lead text-light mx-3">Wanna talk?</p> 
@@ -156,7 +155,7 @@
             <div class="row">
                 <div class="col-12 text-center mb-3">
                     <h1 class="display-2 section-title">Projects</h1>
-                    <p class="lead text-secondary">Fancy stuffs coming soon!</p>
+                    <p class="lead text-secondary">Fancy stuff coming soon!</p>
                 </div>
             </div>
             <!-- end of title -->
