--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                     <h1 class="display-2 text-center section-title">About Me</h1>
                     <p class="lead text-light">I'm a computer engineer who graduated from UADY university.</p>
                     <p class="lead text-light">I have 3+ years of experience in the field of software development. I have played roles like Tester and Developer</p>
+                    <ul class="lead text-light">
+                        <li>Ksquare University August 17 - at present</li>
+                        <li>BeExponential December 2019 - April 2020</li>
+                        <li>UADY October 2017 - December 2019</li>
+                    </ul>
                     <p class="lead text-light">I like to listen to music and podcast but, also I love to cook :)</p>
                 </div>
                 <div class="col-md-12 text-center">
@@ -160,10 +165,20 @@
             </div>
             <!-- end of title -->
             <div class="row justify-content-center">
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <img src="images/portfolio.jpg" class="img-thumbnail hobbies-size">
+                <div class="col-lg-6 col-sm-4 text-center">
+                    <img src="images/movies.png" class="img-thumbnail hobbies-size" style="height: 50%">
+                    <h2 class="my-3 projects-title">Movies Information</h2>
+                    <p class="text-muted">Project focused on consuming a movie API.</p>
+                </div>
+                <div class="col-lg-6 col-sm-4 text-center">
+                    <img src="images/portfolio.png" class="img-thumbnail hobbies-size">
                     <h2 class="my-3 projects-title">Portfolio</h2>
                     <p class="text-muted">Profile page. Work experience, skills and hobbies.</p>
+                </div>
+                <div class="col-lg-6 col-sm-4 text-center">
+                    <img src="images/speech.png" class="img-thumbnail hobbies-size" >
+                    <h2 class="my-3 projects-title">Speech Recognition on Home automation</h2>
+                    <p class="text-muted">Working with voice commands to perform actions</p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <img src="images/reuben-juarez-C4sxVxcXEQg-unsplash.jpg"  class="rounded-circle img-fluid" alt="Responsive Image" 
