--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         </nav>
         <!--end of navbar -->
     </header>
+    <section class="bg-about  fill-height-min space-title hello">
+      <h1 class="regard">WELCOME!</h1>
+    </section>
     <!-- Home -->
     <section id="home">
         <div class="container-fluid">
@@ -261,6 +264,11 @@
                         <a id="mailto" href="" class="btn btn-dark btn-block">Send message</a>
                         <!-- <button class="g-recaptcha" data-sitekey="your_site_key" data-callback='onSubmit'>Submit</button> -->
                     </form>
+                </div>
+            </div>
+            <div class="row">
+                <div>
+                    <a href="#home"><i class="fa fa-home fa-2x text-light mx-3"></i></a>
                 </div>
             </div>
         </div> 
